--- a/Info.plist
+++ b/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleIconFile</key>
 	<string>Icon.pdf</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.mediaatelier.kimaiimporter</string>
+	<string>org.kimai.grandtotal</string>
 	<key>Globals</key>
 	<array>
 		<dict>
@@ -31,6 +31,14 @@
 			<string>token</string>
 			<key>type</key>
 			<string>password</string>
+		</dict>
+		<dict>
+			<key>label</key>
+			<string>More about Kimai</string>
+			<key>url</key>
+			<string>https://www.kimai.org/</string>
+			<key>type</key>
+			<string>link</string>
 		</dict>
 	</array>
 	<key>copyright</key>
